<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"

>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
  >

    <Button
        android:id="@+id/actionRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register by SMS"
    />

    <Button
        android:id="@+id/actionAirbnb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Airbnb Screens"
    />

    <Button
        android:id="@+id/defaultTransitionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_transition"
    />
    <Button
        android:id="@+id/circularRevealTransitionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/circular_reveal_transition"
    />

    <Button
        android:id="@+id/showTransitionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_transition"
    />

    <Button
        android:id="@+id/showNowTransitionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_now_transition"
    />

  </LinearLayout>
</layout>
